--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,25 @@
+/* code to not display extra white space of the right side of website
+credit: https://stackoverflow.com/questions/4617872/white-space-showing-up-on-right-side-of-page-when-background-image-should-extend */
+
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
+
 /* -------------------- Font */
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap');
 
 /*--------------------- General Styling */
+
+.navbar {
+    width: 100%;
+}
 
 body {
     background-color: #dfeaf0;
@@ -43,7 +60,7 @@ p {
 /*---------------------- Introduction */
 
 #introduction {
-    margin: 60px 60px;
+    padding: 30px 40px;
 }
 
 #p2 {
@@ -69,5 +86,54 @@ button, select {
 button:hover {
     background-color: #343d47;
     color: #fff;
+}
+
+/* ----------- Footer */
+
+footer {
+    background-color: #343d47;
+    color: #fafafa;
+    min-height: 100px;
+    margin: 0;
+    font-size: 12px;
+}
+
+/*------------------ Timer */
+
+.timer {
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: 600;
+    background: #b6a399;
+    width: 30px;
+    height: 30px;
+    line-height: 28px;
+    border-radius: 50%;
+    text-align: center;
+}
+
+/*----------------- Game */
+
+.game {
+    grid-gap: 10px;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: repeat(4, auto); 
+}
+
+.card {
+    display: inline-block;
+    width: 8rem;
+    height: 8rem;
+    border-radius: 10%;
+    /* box-shadow trick credit: https://css-tricks.com/almanac/properties/b/box-shadow/ */
+    -webkit-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow:    2px 2px 2px 2px rgba(0, 0, 0, 0.4);
+    box-shadow:         2px 2px 2px 2px rgba(0, 0, 0, 0.4);
+}
+
+.card:hover {
+    background-color: #977f71;
 }
 
