--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,12 @@ html, body {
 
 body {
     background-color:#fafafa;
+    display: flex;
+    flex-direction: column;
+}
+
+.game-container {
+    flex: 1 0 auto;
 }
 
 /* --------------------- Navbar */
@@ -28,9 +34,9 @@ body {
 footer {
     background-color: #343d47;
     color: #fafafa;
-    min-height: 40px;
+    min-height: 10px;
+    flex-shrink: 0;
     margin: 0;
-    margin-top: 20px;
     font-size: 15px;
 }
 
@@ -71,30 +77,54 @@ h2 {
 }
 
 
-/*----------------- Game */
+/*-------------------------------- Game */
 
 .game {
-    grid-gap: 10px;
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    grid-template-columns: repeat(4, auto); 
+    width: 700px;
+    height: 550px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap; 
+    perspective: 1000px;
 }
 
 .card {
-    display: inline-block;
-    background: url('../img/gbg.jpg');
-    width: 9rem;
-    height: 8rem;
+    position: relative;
+    width: calc(25% - 10px);
+    height: calc(25% - 10px);
+    margin-left: 4px;
+    margin-bottom: 2px;
     border-radius: 5%;
-    /* box-shadow trick credit: https://css-tricks.com/almanac/properties/b/box-shadow/ */
-    -webkit-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
-    -moz-box-shadow:    2px 2px 2px 2px rgba(0, 0, 0, 0.4);
-    box-shadow:         2px 2px 2px 2px rgba(0, 0, 0, 0.4);
+    border: 1px solid grey;
+    transform-style: preserve-3d;
+    transition: transform .5s;
+    transform: scale(1); 
+}
+
+.card:active {
+    transform: scale(0.97);
+    transition: transform .2s;
+}
+
+.memory-card.flip {
+    transform: rotateY(180deg);
+}
+
+.front,
+.back {
+    backface-visibility: hidden;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-radius: 5%;
+}
+
+.front {
+  transform: rotateY(180deg);
 }
 
 
-/* Buttons
+/* --------------------------------- Buttons
 credit https://codepen.io/atloomer/pen/JEaRWX */
 
 .button {
@@ -155,22 +185,46 @@ a {
     display: inline;
 }
 
-/*----- Media Queries */
+/* ------------------------------- Icons */
+
+i.fab:hover {
+    color: white;
+}
+
+
+/*------------------------------- Media Queries */
 
 @media only screen and (max-width: 600px) {
+    
     .card {
         width: 7rem;
         height: 6rem;
     }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 520px) and (max-width: 600px) {
+    
+    .game {
+        height: 470px;
+    }
+}
+
+@media only screen and (min-width: 517px) and (max-width: 520px) {
+    
+    .game {
+        width: 70%;
+    } 
+}
+
+@media only screen and (max-width: 520px) {
+    
     .card {
-        width: 8rem;
+        width: 9rem;
         height: 7rem;
     }
+
     .game {
-        grid-template-columns: repeat(2, auto); 
+        height: 1000px;
     }
 }
 
@@ -189,10 +243,26 @@ a {
     }
 }
 
-/* ----------- Icons */
+@media only screen and (max-width: 370px) {
+    
+    .card {
+        width: 7rem;
+        height: 6rem;
+    }
 
-i.fab:hover {
-    color: white;
+    .game {
+        height: 800px;
+    }
 }
+
+@media only screen and (max-width: 280px) {
+    
+    .card {
+        width: 6rem;
+        height: 5rem;
+    }
+}
+
+
 
 
