--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,10 +196,48 @@ i.fab:hover {
 }
 
 .modal-content {
-    background: rgb(133, 134, 134);
+    background: #343d47;
     color: #fafafa;
     font-size: 'Montserrat', sans-serif;
 }
+
+.modal-title {
+    text-transform: uppercase;
+}
+
+.modal-body p {
+    font-weight: 200;
+}
+
+.btn-secondary {
+    text-transform: uppercase;
+}
+
+/* Vertically aligning the modal. Credit: https://stackoverflow.com/questions/18053408/vertically-centering-bootstrap-modal-window */
+
+.vertical-alignment-helper {
+    display:table;
+    height: 100%;
+    width: 100%;
+    pointer-events: none; /* This makes sure that we can still click outside of the modal to close it */
+}
+.vertical-align-center {
+    /* To center vertically */
+    display: table-cell;
+    vertical-align: middle;
+    pointer-events:none;
+}
+
+.modal-content {
+    /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
+    width:inherit;
+    max-width:inherit; /* to avoid the modal window stretching full width */
+    height:inherit;
+    /* To center horizontally */
+    margin: 0 auto;
+    pointer-events: all;
+}
+
 /*------------------------------- Media Queries */
 
 @media only screen and (max-width: 600px) {
